[takt] B-054a23bc: Thread last-viewed API + typed deltas (enables 'new since last visit')
